# sneakyservermetrics

./: Cargo.toml  Dockerfile  fly.toml
src/: main.rs
